# cyborg-parachain

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  INSTRUCTIONS copy.md  INSTRUCTIONS.md  Local Testing NeuroZK_Milestone2.md  Local Testing NeuroZK_Milestone3.md  Local Testing.md  README.md  node-local-chain.json  zombienet.toml
.github/workflows/: ci.yml  deploy.yml
.maintain/: frame-weight-template.hbs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/neuro_zk_daemon/: mod.rs
node/src/worker/: custom_event_listener.rs  donwloade_and_execute_tasks.rs  mod.rs  register_worker.rs  submit_results.rs  worker_spec.rs
pallets/asset-registry/: Cargo.toml  README.md
pallets/asset-registry/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/edge-connect/: Cargo.toml  README.md
pallets/edge-connect/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/neuro-zk/: Cargo.toml  README.md
pallets/neuro-zk/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/payment/: Cargo.toml  README.md
pallets/payment/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/status-aggregator/: Cargo.toml  README.md
pallets/status-aggregator/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/task-management/: Cargo.toml  README.md
pallets/task-management/src/: benchmarking.rs  lib.rs  mock.rs  test.rs  tests.rs  weights.rs
pallets/test/: Cargo.toml
pallets/test/src/: lib.rs
pallets/worker-clusters/: Cargo.toml
pallets/worker-clusters/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/zk-verifier/: Cargo.toml
pallets/zk-verifier/src/: benchmarking.rs  common.rs  deserialization.rs  lib.rs  mock.rs  tests.rs  verify.rs  weights.rs
primitives/: Cargo.toml
primitives/src/: lib.rs  oracle.rs  payment.rs  proof.rs  task.rs  worker.rs  zkml.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  asset_registry.rs  benchmarks.rs  hrmp_manager.rs  lib.rs  oracle.rs  oracle_router.rs
runtime/src/configs/: mod.rs  xcm_config.rs
runtime/src/weights/: cumulus_pallet_parachain_system.rs  cumulus_pallet_xcmp_queue.rs  cumulus_pallet_xcmp_queue_weights.rs  mod.rs  orml_oracle.rs  orml_oracle_weights.rs  pallet_asset_registry.rs  pallet_assets.rs  pallet_balances.rs  pallet_balances_weights.rs  pallet_collator_selection.rs  pallet_collator_selection_weights.rs  pallet_edge_connect.rs  pallet_message_queue.rs  pallet_message_queue_weights.rs  pallet_neuro_zk.rs  pallet_payment.rs  pallet_session.rs  pallet_session_weights.rs  pallet_status_aggregator.rs  pallet_sudo.rs  pallet_sudo_weights.rs  pallet_task_management.rs  pallet_timestamp.rs  pallet_timestamp_weights.rs  pallet_treasury.rs
script/: run_benchmarks.sh
