[workspace.package]
authors = ["Cyborg Network <https://github.com/Cyborg-Network>"]
edition = "2021"
homepage = "https://cyborgnetwork.io/"
repository = "https://github.com/Cyborg-Network/cyborg-parachain/"

[workspace]
members = [
    "node",
    "orml/oracle",
    "orml/traits",
    "pallets/*",
    "primitives",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
# General
clap = { version = "4.5.3", default-features = false }
log = { version = "0.4.21", default-features = false }
serde = { version = "1.0.197", default-features = false }
serde_json = { version = "1.0.114", default-features = false }
jsonrpsee = { version = "0.24.3", default-features = false }
futures = { version = "0.3.28", default-features = false }
docify = { version = "0.2.8", default-features = false }
color-print = { version = "0.3.4", default-features = false }

# ORML
orml-oracle = { path = "orml/oracle", default-features = false }
orml-traits = { path = "orml/traits", default-features = false }

# Codec
codec = { package = "parity-scale-codec", version = "3.6.12", features = ["derive"], default-features = false }
parity-scale-codec = { version = "3.6.12", features = ["max-encoded-len"], default-features = false }
scale-info = { version = "2.11.1", features = ["derive"], default-features = false }

# Local 
cyborg-primitives = { path = "primitives", default-features = false }
pallet-edge-connect = { path = "pallets/edge-connect", version = "0.1.0", default-features = false }
pallet-payment= { path = "pallets/payment", version = "0.1.0", default-features = false }
pallet-status-aggregator = { path = "pallets/status-aggregator", version = "0.1.0", default-features = false }
pallet-task-management = { path = "pallets/task-management", version = "0.1.0", default-features = false }
pallet-zk-verifier = { path = "pallets/zk-verifier", version = "0.1.0", default-features = false }
pallet-neuro-zk = { path = "pallets/neuro-zk", version = "0.1.0", default-features = false }

# Substrate / Frame
frame-benchmarking = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-executive = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-support = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-system = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-system-benchmarking = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
frame-try-runtime = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }

substrate-frame-rpc-system = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
substrate-build-script-utils = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }


# FRAME Pallets
pallet-aura = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-authorship = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-balances = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false } 
pallet-collator-selection = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false } 
pallet-membership = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-message-queue = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-preimage = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-root-testing = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-scheduler = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-session = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-sudo = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-timestamp = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-transaction-payment = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-treasury = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
pallet-xcm = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }

# SC Deps
sc-basic-authorship = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-chain-spec = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-cli = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-client-api = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-offchain = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-consensus = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-executor = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-network = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-network-sync = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-rpc = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-service = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-sysinfo = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-telemetry = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-tracing = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-transaction-pool = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }
sc-transaction-pool-api = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c" }

prometheus-endpoint = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", package = "substrate-prometheus-endpoint", default-features = false }

# Substrate Primitives
sp-api = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-application-crypto = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-arithmetic = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-block-builder = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-blockchain  = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-consensus-aura = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-core = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-genesis-builder = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-inherents = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-io = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-keystore = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-offchain = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-runtime = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-runtime-interface = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-session = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-staking = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-std = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-storage = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-timestamp = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-transaction-pool = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
sp-version = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }

# Polkadot
polkadot-primitives = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
polkadot-parachain-primitives = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
polkadot-runtime-common = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
xcm = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", package = "staging-xcm", default-features = false }
xcm-builder = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", package = "staging-xcm-builder", default-features = false }
xcm-executor = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", package = "staging-xcm-executor", default-features = false }
xcm-simulator = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
polkadot-cli = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }

# Cumulus
cumulus-client-cli = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-client-collator = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-client-consensus-aura = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-client-consensus-common ={ git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-client-consensus-proposer = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-client-service = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-pallet-session-benchmarking = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-primitives-core = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-pallet-weight-reclaim = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
cumulus-client-bootnodes = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
parachains-common = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", default-features = false }
parachain-info = { git = "https://github.com/Cyborg-Network/polkadot-sdk", rev = "6fd693e6d9cfa46cd2acbcb41cd5b0451a62d67c", package = "staging-parachain-info", default-features = false }